# xr-ai

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  README.md  THIRD_PARTY_NOTICES.md  ruff.toml
agent-mcp-servers/client-control-mcp/: client_control_mcp_server.yaml  pyproject.toml
agent-mcp-servers/client-control-mcp/client_control_mcp_server/: __init__.py  __main__.py
agent-mcp-servers/droid-mcp/: README.md  droid_mcp_server.yaml  pyproject.toml
agent-mcp-servers/droid-mcp/droid_mcp_server/: __init__.py  __main__.py  backend.py  build.py  viz.py
agent-mcp-servers/droid-mcp/scripts/: setup_droid.sh
agent-mcp-servers/kimera-mcp/: README.md  kimera_mcp_server.yaml  pyproject.toml
agent-mcp-servers/kimera-mcp/kimera_mcp_server/: __init__.py  __main__.py  build.py  dataset.py  live.py  runner.py  viz.py
agent-mcp-servers/kimera-mcp/scripts/: Dockerfile.kimera  eval_euroc.sh  kimera_live_vio.cpp  run_euroc.sh  setup_euroc.sh  verify_image.sh
agent-mcp-servers/pose-mcp/: pose_mcp_server.yaml  pyproject.toml
agent-mcp-servers/pose-mcp/bench/: tum_bench.py
agent-mcp-servers/pose-mcp/pose_mcp_server/: __init__.py  __main__.py  backends.py  geometry.py  localizer.py  pgo.py  store.py  viz.py
agent-mcp-servers/render-mcp/: pyproject.toml  render_mcp.yaml
agent-mcp-servers/render-mcp/render_mcp/: __init__.py  __main__.py
agent-mcp-servers/render-mcp/xr_app/: conf.lua  main.lua
agent-mcp-servers/space-mcp/: pyproject.toml  space_mcp_server.yaml
agent-mcp-servers/space-mcp/space_mcp_server/: __init__.py  __main__.py  embedder.py  regions.py  tracker.py  viz.py
agent-mcp-servers/video-mcp/: pyproject.toml  video_mcp_server.yaml
agent-mcp-servers/video-mcp/video_mcp_server/: __init__.py  __main__.py  live.py
agent-samples/echo-agent/: pyproject.toml
agent-samples/echo-agent/echo_agent/: __main__.py
agent-samples/glasses-agent-langchain/worker/: agent.py  config.py  glasses_agent_langchain_worker.py  memory.py  processors.py  pyproject.toml  vad.py
agent-samples/glasses-agent-nat/worker/: agent.py  config.py  demo_lifecycle.py  demo_phrases.py  glasses_agent_nat_worker.py  glasses_nat_register.py  glasses_nat_schemas.py  glasses_nat_tasks.py  guidance.py  intent.py  mcp_shims.py  memory.py  nat_agent.py  nat_runtime.py  processors.py  pyproject.toml  smoke_test.py  vad.py
agent-samples/mono-slam-example/viz/: mono_slam_example_viz.py  plot3d.py  pyproject.toml
agent-samples/mono-slam-example/worker/: agent.py  mono_slam_example_worker.py  pixels.py  pose.py  pyproject.toml  slam.py
agent-samples/nat-agent/: README.md  nat_agent.py  nat_agent_worker.yaml  nat_agent_workflow.yaml  nemotron3_nano_llm_server.yaml  piper_tts_server.yaml  pyproject.toml  stt_server.yaml  video_mcp_server.yaml  vlm_mcp_server.yaml  vlm_server.yaml  xr_media_hub.yaml
agent-samples/nat-agent/worker/: agent.py  audio.py  config.py  nat_agent_worker.py  nat_backend.py  processors.py  pyproject.toml  services.py  transport.py
agent-samples/room-tour-example/worker/: agent.py  pose_provider.py  pyproject.toml  room_tour_example_worker.py  test_pose_provider.py
agent-samples/simple-vlm-example/worker/: agent.py  audio.py  pyproject.toml  services.py  simple_vlm_example_worker.py  voice.py
agent-samples/slam-example/worker/: agent.py  pyproject.toml  slam_client.py  slam_example_worker.py
agent-samples/xr-render-demo/: AGENTS.md  cloudxr_runtime.yaml  llama_nemotron_llm_server.yaml  main.py  nemotron3_nano_llm_server.yaml  oxr_mcp_server.yaml  pyproject.toml  stt_server.yaml  vlm_server.yaml  xr_media_hub.yaml  xr_render_demo_worker.yaml
agent-samples/xr-render-demo/eval/: README.md  eval.py  eval_watch.sh
agent-samples/xr-render-demo/scene/: pyproject.toml  scene_service.yaml
agent-samples/xr-render-demo/worker/: agent.py  capabilities.py  config.py  processors.py  pyproject.toml  xr_render_demo_worker.py
agent-samples/xr-render-demo/xr_render_demo/: __init__.py  __main__.py
agent-samples/xr-render-demo/yaml/: cloudxr_runtime.yaml  models.nim.yaml  oxr_mcp_server.yaml  video_mcp_server.yaml  video_memory_service.yaml  vlm_mcp_server.nim.yaml  voice_gate.yaml  xr_media_hub.yaml  xr_render_demo_worker.yaml
agent-sdk/xr-ai-conversation/: pyproject.toml
agent-sdk/xr-ai-conversation/xr_ai_conversation/: __init__.py  audio.py  gate_wiring.py  loop.py  state.py  (+1 more)
agent-sdk/xr-ai-nat/: README.md  pyproject.toml
ai-services/embedding-server/: README.md  embedding_server.yaml  pyproject.toml
ai-services/semantic-slam/: pyproject.toml  semantic_slam.yaml
ai-services/vlm-server-docker/: pyproject.toml  vlm_server_docker.yaml
experimental/semantic-slam-source/: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  sceneGraphDemo_test.yml  setup.py
services/openxr-service/: openxr_service.yaml  pyproject.toml
services/video-memory-service/: README.md  pyproject.toml  video_memory_service.yaml
tests/: README.md  _helpers.py  _stub_openai.py  conftest.py  pyproject.toml  run_local_gpu_tests.sh  test_agent_codec.py  test_agent_monitor.py  test_agent_status_ready.py  test_cloudxr_runtime_process.py  test_gpu_llm_servers.py  test_gpu_magpie_tts.py  test_gpu_stt_server.py  test_gpu_video_mcp.py  test_gpu_video_recorder.py  test_gpu_vlm_server.py  test_integration_livekit.py  test_launcher_credentials.py  test_launcher_gpu.py  test_launcher_stack.py  test_livekit_config_loader.py  test_local_render_mcp.py  test_logging_setup.py  test_models_config.py  test_models_openai_compat.py  test_models_protocols.py  test_mono_slam_benchmark.py  test_mono_slam_pose.py  test_mono_slam_smoke.py  test_nat_models_llm.py  test_nemo_docker.py  test_oxr_mcp.py  test_participant_events.py  test_pipecat_services_wire.py  test_piper_tts.py  test_pose_mcp.py  test_return_audio_pacing.py  test_scene_functions.py  test_shm_ring_buffer.py  test_simple_vlm_example_wire.py  (+17 more)
utils/xr-ai-nemo-runtime/: pyproject.toml
utils/xr-ai-vad/: pyproject.toml
utils/xr-ai-vllm/: pyproject.toml
(+600 files in other folders)
