[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "client-control-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xr-ai-agent",
    "fastmcp>=0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
]

[tool.uv.sources]
xr-ai-agent = { path = "../../agent-sdk", editable = true }

[project.scripts]
client_control_mcp_server = "client_control_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["client_control_mcp_server"]
