# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "droid-mcp-server"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn[standard]>=0.29",
    "fastmcp>=0.4",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "xr-ai-logging",
    # droid-slam itself is NOT a pip dep — it's installed via the
    # scripts/setup_droid.sh script which clones the upstream repo and
    # builds its CUDA extensions against the host's PyTorch.  We import
    # `droid_slam` lazily so this package's `uv sync` step doesn't fail
    # on a GPU-less developer box.
    # cu118 wheels for both — that's the highest CUDA torch line that
    # still works against older system nvcc / NCCL combos, which is the
    # common case for boxes with stable CUDA 11.x toolkits.  Pinned
    # below 2.5 because torch dropped cu118 wheels in that release.
    # Operators with newer system CUDA can override via the override
    # block below.
    "torch>=2.1,<2.5",
    "torchvision>=0.16,<0.20",
    # torch's metadata doesn't always pull cuDNN as a hard transitive
    # (it's "optional" in some wheels), but the cu118 binary links
    # libtorch_cuda.so → libcudnn.so.9 with DT_NEEDED, so loading
    # torch fails at import time if it's missing.  Pin >=9 to match
    # the cu118 wheel's expected ABI.
    "nvidia-cudnn-cu11>=9.0",
    # DROID-SLAM's setup.py uses classic `from setuptools import setup`;
    # uv doesn't install setuptools / wheel in PEP 517 venvs by default,
    # so the CUDA-extension compile fails with ModuleNotFoundError.
    # ninja makes the compile parallel + much faster.
    "setuptools>=65",
    "wheel>=0.40",
    "ninja>=1.11",
    # Live trajectory + camera viz.  Pinned to a single 0.32 line so a
    # viewer launched from this venv matches the schema we log with.
    "rerun-sdk>=0.32,<0.33",
]

# Pull torch + torchvision from the PyTorch cu118 index so the wheel
# we get bundles libnccl.so.2 compatible with hosts that still have a
# CUDA 11.x toolkit on PATH.  `explicit = true` keeps everything else
# coming from PyPI.  Override with a different index (cu121, cu124,
# etc.) if your host has newer system CUDA.
[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }
torch         = { index = "pytorch-cu118" }
torchvision   = { index = "pytorch-cu118" }

[project.scripts]
droid_mcp_server = "droid_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["droid_mcp_server"]
# Ship setup_droid.sh alongside the package so `ensure_droid_installed`
# can find it at runtime under both editable and wheel installs.
force-include = { "scripts" = "droid_mcp_server/_scripts" }
