# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "render-mcp"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-logging",
    "xr-render-scene",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.29",
    "fastmcp>=2.0",
]

[tool.uv.sources]
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }
xr-render-scene = { path = "../../agent-samples/xr-render-demo/scene", editable = true }

[project.scripts]
render_mcp = "render_mcp.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["render_mcp"]
