# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-mcp-server"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn[standard]>=0.29",
    "fastmcp>=0.4",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "torch>=2.2",
    # `transformers.AutoImageProcessor` resamples + normalizes the input
    # through torchvision under the hood — without this you hit
    # `AutoImageProcessor requires the Torchvision library`.
    "torchvision>=0.17",
    # DINOv2 (Apache-2.0) is loaded through `transformers` so we avoid
    # vendoring model code; same path the wider HF ecosystem uses.
    "transformers>=4.40",
    "xr-ai-logging",
]

[project.optional-dependencies]
# Rerun viewer integration (Apache-2.0 / MIT).  Kept optional because
# rerun-sdk requires numpy>=2 while pose-mcp's gtsam dep pins numpy<2 —
# the two servers can therefore not share a single venv if both pull
# rerun-sdk as a hard dep, and the tests venv installs both editably.
# Install with: `uv sync --extra viz` (and launch the viewer from THIS
# venv so the SDK and `rerun` binary versions match the schema).
viz = ["rerun-sdk>=0.32,<0.33"]

[tool.uv.sources]
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }

[project.scripts]
space_mcp_server = "space_mcp_server.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["space_mcp_server"]
