[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-render-demo"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-launcher",
]

[tool.uv.sources]
xr-ai-launcher = { path = "../../launcher", editable = true }

[project.scripts]
xr_render_demo = "xr_render_demo.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["xr_render_demo"]
