# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-ai-nat"
version = "0.1.0"
description = "NVIDIA NeMo Agent Toolkit functions for XR AI."
requires-python = ">=3.11,<3.13"
dependencies = [
    "nvidia-nat-core==1.8.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.4,<4"]

[project.entry-points."nat.plugins"]
xr_ai_nat_spatial_math = "xr_ai_nat.functions.spatial_math.functions"
xr_ai_nat_text_memory = "xr_ai_nat.functions.text_memory.functions"

[tool.hatch.build.targets.wheel]
packages = ["xr_ai_nat"]
