# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedding-server"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vllm>=0.12.0",
    "pyyaml>=6.0",
    "hf-transfer>=0.1.4",
    "xr-ai-logging",
    "xr-ai-vllm",
]

[project.scripts]
embedding_server = "embedding_server.__main__:run"

[tool.uv.sources]
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }
xr-ai-vllm    = { path = "../../utils/xr-ai-vllm",    editable = true }

[tool.hatch.build.targets.wheel]
packages = ["embedding_server"]
