# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-server-docker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Model weights are pulled and served via Docker Model Runner.
    "pyyaml>=6.0",
]

[project.scripts]
vlm_server_docker = "vlm_server_docker.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["vlm_server_docker"]
