# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-openxr-service"
version = "0.1.0"
description = "Long-running OpenXR tracking service for XR AI."
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-launcher",
    "xr-ai-logging",
    "xr-ai-nat[services]",
    "pyyaml>=6.0",
    "isaacteleop",
]

[tool.uv.sources]
xr-ai-launcher = { path = "../../utils/xr-ai-launcher", editable = true }
xr-ai-logging = { path = "../../utils/xr-ai-logging", editable = true }
xr-ai-nat = { path = "../../agent-sdk/xr-ai-nat", editable = true }

[project.scripts]
openxr_service = "openxr_service.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["openxr_service"]
