# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-ai-nemo-runtime"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
# Stdlib only — no torch/nemo/fastapi imported here, so the docker path stays
# light even where the NeMo wrappers' heavy deps are not installed.
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["xr_ai_nemo_runtime"]
