# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glasses-agent-langchain-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-logging",
    "numpy>=1.24",
    "Pillow>=10.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastmcp>=0.4",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.0",
    "langchain-mcp-adapters>=0.2.2",
    # Neural VAD — requires onnxruntime for the ONNX inference backend.
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
]

[tool.uv.sources]
xr-ai-agent   = { path = "../../../agent-sdk",            editable = true }
xr-ai-logging = { path = "../../../utils/xr-ai-logging",  editable = true }

[project.scripts]
glasses_agent_langchain_worker = "glasses_agent_langchain_worker:run"

[tool.hatch.build.targets.wheel]
only-include = [
    "glasses_agent_langchain_worker.py",
    "agent.py",
    "vad.py",
    "processors.py",
    "memory.py",
    "config.py",
]
