# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glasses-agent-nat-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-logging",
    "numpy>=1.24",
    "Pillow>=10.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "nvidia-nat[langchain,mcp]>=1.6",
    "pydantic>=2.7",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    # torchaudio MUST share torch's minor version or its native lib
    # (libtorchaudio) fails to load with an ABI error, which makes
    # silero-vad's load_silero_vad(onnx=True) raise and the VAD silently
    # degrades to the crude energy fallback (garbled, multi-sentence STT).
    # nvidia-nat constrains torch to 2.10.x here, but torchaudio otherwise
    # floats to 2.11.x — pin it to the matching minor. Bump both together.
    "torchaudio>=2.10,<2.11",
]

[tool.uv.sources]
xr-ai-agent   = { path = "../../../agent-sdk",            editable = true }
xr-ai-logging = { path = "../../../utils/xr-ai-logging",  editable = true }

[project.scripts]
glasses_agent_nat_worker = "glasses_agent_nat_worker:run"

[project.entry-points.'nat.plugins']
glasses_agent_nat_worker = "glasses_nat_register"

[tool.hatch.build.targets.wheel]
only-include = [
    "glasses_agent_nat_worker.py",
    "agent.py",
    "nat_agent.py",
    "nat_runtime.py",
    "glasses_nat_register.py",
    "glasses_nat_schemas.py",
    "glasses_nat_tasks.py",
    "intent.py",
    "processors.py",
    "memory.py",
    "config.py",
    "vad.py",
]
