# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glasses-agent-nat-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    # Teacher-demo (analyze_recording, derive_step_*) and agent-monitor
    # (check_guidance_step_complete) logic lives in xr-ai-capabilities;
    # glasses_nat_tasks keeps only thin NAT→xr-ai-models adapters over it.
    "xr-ai-capabilities",
    "xr-ai-logging",
    # Voice I/O is the unified pipecat pipeline (same as simple-vlm-example /
    # xr-render-demo). xr-ai-pipecat owns VAD/STT/TTS/transport and pulls
    # xr-ai-vad (silero-vad + onnxruntime) transitively; xr-ai-voicegate is
    # imported directly for the always-on VoiceGateConfig. xr-ai-models owns the
    # OpenAI-compatible STT/TTS clients built in the worker.
    "xr-ai-models",
    "xr-ai-pipecat",
    "xr-ai-voicegate",
    "pipecat-ai>=1.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "nvidia-nat[langchain,mcp]>=1.6",
    "pydantic>=2.7",
    # torchaudio MUST share torch's minor version or its native lib
    # (libtorchaudio) fails to load with an ABI error, which makes
    # silero-vad's load_silero_vad(onnx=True) — used by xr-ai-vad via
    # xr-ai-pipecat — raise. nvidia-nat constrains torch to 2.10.x here, but
    # torchaudio otherwise floats to 2.11.x — pin it to the matching minor.
    # Bump both together.
    "torchaudio>=2.10,<2.11",
]

[tool.uv.sources]
xr-ai-agent        = { path = "../../../agent-sdk",                     editable = true }
xr-ai-capabilities = { path = "../../../agent-sdk/xr-ai-capabilities", editable = true }
xr-ai-logging      = { path = "../../../utils/xr-ai-logging",          editable = true }
xr-ai-models    = { path = "../../../agent-sdk/xr-ai-models",  editable = true }
xr-ai-pipecat   = { path = "../../../agent-sdk/xr-ai-pipecat", editable = true }
xr-ai-voicegate = { path = "../../../utils/xr-ai-voicegate",   editable = true }

[project.scripts]
glasses_agent_nat_worker = "glasses_agent_nat_worker:run"

[project.entry-points.'nat.plugins']
glasses_agent_nat_worker = "glasses_nat_register"

[tool.hatch.build.targets.wheel]
only-include = [
    "glasses_agent_nat_worker.py",
    "agent.py",
    "nat_agent.py",
    "nat_runtime.py",
    "glasses_nat_register.py",
    "glasses_nat_schemas.py",
    "glasses_nat_tasks.py",
    "intent.py",
    "processors.py",
    "memory.py",
    "config.py",
]
