# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mono-slam-example-viz"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xr-ai-agent",
    "xr-ai-logging",
    "numpy>=1.24",
    # matplotlib provides FuncAnimation + mpl_toolkits.mplot3d (3-D trajectory
    # and orientation triad).  No PyQt5 dep — we use TkAgg when a display is
    # available and Agg (off-screen PNG) otherwise.
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[tool.uv.sources]
xr-ai-agent   = { path = "../../../agent-sdk", editable = true }
xr-ai-logging = { path = "../../../utils/xr-ai-logging", editable = true }

[project.scripts]
mono_slam_example_viz = "mono_slam_example_viz:run"

[tool.hatch.build.targets.wheel]
only-include = [
    "mono_slam_example_viz.py",
    "plot3d.py",
]
